# clauset

./: .gitignore  CLAUDE.md  CONTINUITY.md  Cargo.toml  DEPLOYMENT.md  README.md
.claude/: settings.local.json
config/: beta.toml  default.toml  production.toml
crates/clauset-core/: Cargo.toml
crates/clauset-core/src/: buffer.rs  chat_processor.rs  claude_sessions.rs  command_discovery.rs  db.rs  diff.rs  error.rs  history.rs  interaction_store.rs  lib.rs  parser.rs  process.rs  prompt_indexer.rs  session.rs  sizing.rs  transcript_watcher.rs  tui_menu_parser.rs
crates/clauset-server/: Cargo.toml
crates/clauset-server/src/: config.rs  event_processor.rs  global_ws.rs  interaction_processor.rs  lib.rs  logging.rs  main.rs  state.rs  websocket.rs
crates/clauset-server/src/routes/: commands.rs  history.rs  hooks.rs  interactions.rs  mod.rs  projects.rs  prompts.rs  sessions.rs  ws.rs
crates/clauset-server/tests/: hook_pipeline.rs  hooks_tests.rs  permission_mode.rs
crates/clauset-types/: Cargo.toml
crates/clauset-types/src/: chat.rs  claude.rs  command.rs  hooks.rs  interaction.rs  interactive.rs  lib.rs  prompt.rs  session.rs  tui_menu.rs  ws.rs
docs/: FEATURE_PLAN.md  logging.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/docs/: terminal-clipping-debug.md
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: SessionCard.tsx
frontend/src/components/chat/: InputBar.tsx  MessageBubble.tsx  NewSessionModal.tsx  QuickActionsMenu.tsx
frontend/src/components/commands/: CommandPicker.tsx
frontend/src/components/interactions/: DiffViewer.tsx  InteractionCard.tsx  SearchModal.tsx  TimelineView.tsx
frontend/src/components/interactive/: InteractiveCarousel.tsx  QuestionCard.tsx
frontend/src/components/prompts/: PromptLibraryModal.tsx
frontend/src/components/session/: AllowedToolsPanel.tsx  KeyboardShortcutsModal.tsx  SessionSettingsMenu.tsx  StatusBar.tsx  SubagentPanel.tsx  TodoWidget.tsx
frontend/src/components/terminal/: TerminalView.tsx
frontend/src/components/tui_menu/: TuiMenuOverlay.css  TuiMenuOverlay.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  ConnectionStatus.tsx  Spinner.tsx
frontend/src/lib/: api.ts  fonts.ts  format.ts  globalWs.ts  keyboard.ts  preventOverscroll.ts  terminalSizing.ts  ws.ts
frontend/src/lib/__tests__/: format.test.ts  ws.test.ts
frontend/src/pages/: Analytics.tsx  Session.tsx  Sessions.tsx
frontend/src/stores/: commands.ts  interactions.ts  interactive.ts  messages.ts  prompts.ts  sessions.ts  terminal.ts  tui_menu.ts
frontend/src/stores/__tests__/: interactive.test.ts  messages.test.ts  tui_menu.test.ts
frontend/src/test/: example.test.ts  setup.ts
frontend/src/test/mocks/: ws.ts
scripts/: clauset  clauset-hook.sh  clauset-hooks-settings.json  install-launchd.sh  setup-hooks.sh
tests/common/: mod.rs
tests/fixtures/hook_events/: notification.json  permission_request.json  post_tool_use.json  post_tool_use_failure.json  post_tool_use_timeout.json  pre_compact.json  pre_tool_use_bash.json  pre_tool_use_read.json  session_end.json  session_start.json  stop.json  subagent_start.json  subagent_stop.json  user_prompt_submit.json
