[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Clauset"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# PTY handling
portable-pty = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6.1"
notify = "7.0"
dirs = "5.0"
regex = "1.11"
once_cell = "1.20"
libc = "0.2"

# Internal crates
clauset-types = { path = "crates/clauset-types" }
clauset-core = { path = "crates/clauset-core" }
