[package]
name = "clauset-core"
version.workspace = true
edition.workspace = true

[dependencies]
clauset-types.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
dashmap.workspace = true
notify.workspace = true
dirs.workspace = true
portable-pty.workspace = true
rusqlite.workspace = true
regex.workspace = true
once_cell.workspace = true
libc.workspace = true
sha2.workspace = true
zstd.workspace = true
similar.workspace = true

[dev-dependencies]
tempfile = "3.15"
proptest = "1.4"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
