[package]
name = "clauset-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "clauset-server"
path = "src/main.rs"

[dependencies]
clauset-types.workspace = true
clauset-core.workspace = true

clap.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
dashmap.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
axum-test.workspace = true
